--- a/index after login.html
+++ b/index after login.html
@@ -222,8 +222,9 @@
 
     <section class="section-image-top-position mt-3">
 
-        <div id="carouselExampleControlsNoTouching" class="carousel slide-fade" data-bs-touch="false"
+        <div id="sliderIndexAfterLohin" class="carousel slide-fade" data-bs-touch="false"
             data-bs-interval="false">
+
             <div class="carousel-inner">
 
                 <div class="carousel-item active width-height-img-slider-top right">
@@ -315,12 +316,12 @@
             </div>
 
             <button class="left carousel-control-prev bg-dark text-white prev-slider " type="button"
-                data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+                data-bs-target="#sliderIndexAfterLohin" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
             <button class="right carousel-control-next bg-dark text-white next-slider " type="button"
-                data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                data-bs-target="#sliderIndexAfterLohin" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -1092,7 +1093,7 @@
 
     </section>
     <!-- section Looking-for-ride -->
-    
+
     <!-- section this-brand-car-web carousel-->
     <div id="haverAndClick" class="carousel slide-fade" data-bs-touch="false" data-bs-interval="false">
 
